--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: Objectzilla, por Leonardo Ver&iacute;ssimo da Silva
 ---
 
 <div id="home">
