Adicionando informações sobre mim

--- a/about.html
+++ b/about.html
@@ -2,7 +2,19 @@
 layout: default
 title: Sobre mim
 ---
+
+
 <div class="offset2 span8">
 	<h2>Sobre Mim</h2>
-	<p>Olá, eu sou Leonardo Veríssimo da Silva.</p>
+	<p>Olá internauta,
+	<p>
+		Sou Leonardo Veríssimo da Silva, programador, formado desde 2005 em Ciência da Computação pela Universidade Federal de São Carlos, com experiência, principalmente, na plataforma Java, em programação web e também na linguagem C++. Conheço alguns bancos de dados, como Oracle, PostgreSQL e MySQL e sei me virar num terminal Unix. Além disso, estou sempre estudando e me aventurando em novas tecnologias, novos conceitos e novas linguagens.
+	</p>
+	<p>
+		Meu blog é qualquer coisa sobre programação. Apesar de conhecer mais Java, não há um tema específico, vou falar o que acho interessante. Pode ser coisas que eu já sei, ou coisas que estou aprendendo e quero compartilhar. Por favor, não fiquem com a impressão de que eu sou muito bom. Não quero parecer melhor do que os outros e posso estar errado. Aceito críticas construtivas, ok?
+
+	</p>
+	 <p>
+	 	Atualmente, trabalho na empresa Certisign como Analista de Sistemas.
+	 </p>
 </div>
